--- a/04_数理最適化の続き.ipynb
+++ b/04_数理最適化の続き.ipynb
@@ -33,22 +33,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "CfuJbbwPgBI9",
-        "outputId": "2ee4c905-c72c-45e0-e37e-1de93120ca8d"
+        "id": "CfuJbbwPgBI9"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: pulp in /usr/local/lib/python3.8/dist-packages (2.7.0)\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "!pip install pulp"
       ]
@@ -420,29 +407,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "twwrFOLQJmFM",
-        "outputId": "1e16899c-124e-41b1-c02e-fba10f1d7d4b"
+        "id": "twwrFOLQJmFM"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "99999.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
-        }
-      ],
+      "outputs": [],
       "source": [
         "costs = pd.read_csv('https://raw.githubusercontent.com/naohiro701/naohiro701/main/data/seminar_04.csv', index_col=0, na_values = 'na')\n",
         "costs = costs.fillna(99999)\n",
-        "# costs\n",
-        "# costs.loc[\"S001\",\"C01\"]"
+        "costs.loc[\"S001\",\"C01\"]"
       ]
     },
     {
@@ -458,21 +429,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "UruqLvnVimms",
-        "outputId": "83711385-160e-457e-c57f-d302f9c8def6"
+        "id": "UruqLvnVimms"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['S001', 'S002', 'S003', 'S004', 'S005', 'S006', 'S007', 'S008', 'S009', 'S010', 'S011', 'S012', 'S013', 'S014', 'S015', 'S016', 'S017', 'S018', 'S019', 'S020', 'S021', 'S022', 'S023', 'S024', 'S025', 'S026', 'S027', 'S028', 'S029', 'S030', 'S031', 'S032', 'S033', 'S034', 'S035', 'S036', 'S037', 'S038', 'S039', 'S040', 'S041', 'S042', 'S043', 'S044', 'S045', 'S046', 'S047', 'S048', 'S049', 'S050', 'S051', 'S052', 'S053', 'S054', 'S055', 'S056', 'S057', 'S058', 'S059', 'S060', 'S061', 'S062', 'S063', 'S064', 'S065', 'S066', 'S067', 'S068', 'S069', 'S070', 'S071', 'S072', 'S073', 'S074', 'S075', 'S076', 'S077', 'S078', 'S079', 'S080', 'S081', 'S082', 'S083', 'S084', 'S085', 'S086', 'S087', 'S088', 'S089', 'S090', 'S091', 'S092', 'S093', 'S094', 'S095', 'S096', 'S097', 'S098', 'S099', 'S100']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 変数の定義\n",
         "students = costs.index.tolist()\n",
