--- a/05.地図を用いたデータの可視化.md
+++ b/05.地図を用いたデータの可視化.md
@@ -2,7 +2,8 @@
 
 ### ゴール
 このようなものを完成させる．
-[作例－地域エネルギー需給データベース（再エネポテンシャル）](https://energy-sustainability.jp/maps/potential/)
+
+- [作例－地域エネルギー需給データベース（再エネポテンシャル）](https://energy-sustainability.jp/maps/potential/)
 
  ### 使用するデータ・ツール
  - [Kepler.gl](https://kepler.gl/)
@@ -20,18 +21,18 @@
  #### 0.環境構築
  geopandasというライブラリを使用します．環境の作成がデリケートなので，注意して行ってください．（仮想環境を最初に作るとうまくいくという都市伝説を信仰しています）
  
- """
+ ```
  conda create -n 環境名 
  conda activate  環境名
  conda install -c conda-forge geopandas
- """
+ ```
  
  #### 1. 2つのファイルを結合する
  早速geopandasを用いて，ファイルの作成を進めていきます．
  今回は，自分が可視化してみたいデータを探してみてください！
  
  
- """
+ ```
  import geopandas as gpd
  import pandas as pd
  
@@ -44,4 +45,4 @@
  
  # export
  merge_data.to_file(r"file_name.geojson")
- """
+ ```
