--- a/05.地図を用いたデータの可視化.md
+++ b/05.地図を用いたデータの可視化.md
@@ -3,7 +3,7 @@
 ### ゴール
 このようなものを完成させる．
 
-- [作例－地域エネルギー需給データベース（再エネポテンシャル）](https://energy-sustainability.jp/maps/potential/)
+- [作例－地域エネルギー需給データベース（再生可能エネルギー 導入ポテンシャル）](https://energy-sustainability.jp/maps/potential/)
 
  ### 使用するデータ・ツール
  - [Kepler.gl](https://kepler.gl/)
