--- a/05.地図を用いたデータの可視化.md
+++ b/05.地図を用いたデータの可視化.md
@@ -19,7 +19,8 @@
  - csv:必要なデータをまとめる（扱いやすい）
  
  #### 0.環境構築
- geopandasというライブラリを使用します．環境の作成がデリケートなので，注意して行ってください．（仮想環境を最初に作るとうまくいくという都市伝説を信仰しています）
+ geopandasというライブラリを使用します．環境の作成がデリケートなので，注意して行ってください．
+ （仮想環境を最初に作るとうまくいくという都市伝説を信仰しています）
  
  ```
  conda create -n 環境名 
@@ -33,6 +34,7 @@
  
  
  ```
+ # sample.py
  import geopandas as gpd
  import pandas as pd
  
@@ -42,7 +44,8 @@
  
  # merge
  merge_data = pd.concat([df, geo_data],  axis=1)
+ gdf = gpd.GeoDataFrame(merge_data)
  
  # export
- merge_data.to_file(r"file_name.geojson")
+ gdf.to_file(r"file_name.geojson")
  ```
