--- a/movie_to_text.ipynb
+++ b/movie_to_text.ipynb
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "source": [
         "# youtube url\n",
-        "youtube_url = \"https://www.youtube.com/watch?v=vYXp15_9zew&list=PLaB4zqRu9y1AY3XNdD6wFe30-QdEETKd7\""
+        "youtube_url = \"\""
       ],
       "metadata": {
         "id": "hOlp31eCh20U"
