--- a/movie_to_wordcloud/movie_to_wordcloud.ipynb
+++ b/movie_to_wordcloud/movie_to_wordcloud.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMmylWZkNU8ypraR+QnNBpT",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/naohiro701/naohiro701/blob/main/movie_to_text.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -28,47 +12,46 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# youtube url\n",
-        "youtube_url = \"\""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "hOlp31eCh20U"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# youtube url\n",
+        "youtube_url = \"\""
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "### set google drive "
-      ],
       "metadata": {
         "id": "PGkygt-jSSqv"
-      }
+      },
+      "source": [
+        "### Set Google Drive "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "from google.colab import files\n",
-        "# drive.mount('/content/drive')\n",
-        "# mp3_url = files.upload() #MP3"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yRSn2eucST0Y"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "from google.colab import files"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### convert movie on youtube to mp3"
-      ],
       "metadata": {
         "id": "RP21DLI-PPv8"
-      }
+      },
+      "source": [
+        "### convert movie on youtube to mp3"
+      ]
     },
     {
       "cell_type": "code",
@@ -83,61 +66,63 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eu7LXXphSdMQ"
+      },
+      "outputs": [],
       "source": [
         "from yt_dlp import YoutubeDL\n",
         "\n",
-        "# 条件設定\n",
         "ydl_opts = {\n",
         "    'format': 'bestaudio/best',\n",
         "    'outtmpl':  \"sample_music\" + '.%(ext)s',\n",
         "    'postprocessors': [\n",
         "        {'key': 'FFmpegExtractAudio',\n",
         "        'preferredcodec': 'mp3',\n",
-        "         'preferredquality': '128'},\n",
+        "        'preferredquality': '128'},\n",
         "        {'key': 'FFmpegMetadata'},\n",
         "    ],\n",
         "}"
-      ],
-      "metadata": {
-        "id": "eu7LXXphSdMQ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "with YoutubeDL(ydl_opts) as ydl:\n",
-        "    error_code = ydl.download(youtube_url )"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OJXDD9_ZdZxp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "with YoutubeDL(ydl_opts) as ydl:\n",
+        "    error_code = ydl.download(youtube_url )"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### import wisper"
-      ],
       "metadata": {
         "id": "aAF1ugfwPMmO"
-      }
+      },
+      "source": [
+        "### import wisper"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install git+https://github.com/openai/whisper.git "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "A4u7niX-PMHO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install git+https://github.com/openai/whisper.git "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "CTb9zFOgWAuy"
+      },
       "source": [
         "|  Size  | Parameters | English-only model | Multilingual model | Required VRAM | Relative speed |\n",
         "|:------:|:----------:|:------------------:|:------------------:|:-------------:|:--------------:|\n",
@@ -146,62 +131,63 @@
         "| small  |   244 M    |     `small.en`     |      `small`       |     ~2 GB     |      ~6x       |\n",
         "| medium |   769 M    |    `medium.en`     |      `medium`      |     ~5 GB     |      ~2x       |\n",
         "| large  |   1550 M   |        N/A         |      `large`       |    ~10 GB     |       1x       |\n"
-      ],
-      "metadata": {
-        "id": "CTb9zFOgWAuy"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import whisper"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "kY9om5bkQCvw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import whisper"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "model = whisper.load_model(\"large\")\n",
-        "mp3_url = \"/content/sample_music.mp3\"\n",
-        "result = model.transcribe(mp3_url)\n",
-        "# print(result[\"text\"])"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "YCHeXW3fPJ63"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "model = whisper.load_model(\"large\")\n",
+        "result = model.transcribe(\"/content/sample_music.mp3\")"
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "### make word cloud"
-      ],
       "metadata": {
         "id": "XJFjIBpOPYgd"
-      }
+      },
+      "source": [
+        "### Make Word Cloud"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "eret5C7UPJ9T"
+      },
+      "outputs": [],
       "source": [
         "!apt install aptitude\n",
         "!aptitude install git make curl xz-utils file -y\n",
         "!aptitude install mecab libmecab-dev mecab-ipadic-utf8 -y\n",
         "!pip install mecab-python3==0.7\n",
         "!apt-get -y install fonts-ipafont-gothic"
-      ],
-      "metadata": {
-        "id": "eret5C7UPJ9T"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "900zR5bsPJ_c"
+      },
+      "outputs": [],
       "source": [
         "import MeCab\n",
         "from collections import defaultdict\n",
@@ -211,15 +197,15 @@
         "from zipfile import ZipFile\n",
         "import IPython\n",
         "from wordcloud import WordCloud"
-      ],
-      "metadata": {
-        "id": "900zR5bsPJ_c"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "oHPm6RiFPiOG"
+      },
+      "outputs": [],
       "source": [
         "def load_from_url(url):\n",
         "    data = urllib.request.urlopen(url).read()\n",
@@ -229,39 +215,15 @@
         "    text = re.sub(r'［.*?］', '', text)\n",
         "    text = re.sub(r'《.*?》', '', text)\n",
         "    return text"
-      ],
-      "metadata": {
-        "id": "oHPm6RiFPiOG"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "def show_top10(text):\n",
-        "    m = MeCab.Tagger()\n",
-        "    node = m.parseToNode(text)\n",
-        "    dic = defaultdict(int)\n",
-        "    while node:\n",
-        "        a = node.feature.split(\",\")\n",
-        "        key = node.surface\n",
-        "        if a[0] == u\"名詞\" and a[1] == u\"一般\" and key != \"\":\n",
-        "            dic[key] += 1\n",
-        "        node = node.next\n",
-        "    for k, v in sorted(dic.items(), key=lambda x: -x[1])[0:10]:\n",
-        "        print(k + \":\" + str(v))\n",
-        "\n",
-        "# show_top10(text)"
-      ],
-      "metadata": {
-        "id": "VXwKcdthPjcT"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "metadata": {
+        "id": "LoxFEreqPsVF"
+      },
+      "outputs": [],
       "source": [
         "def get_words(text):\n",
         "    w = \"\"\n",
@@ -273,39 +235,39 @@
         "            w += node.surface + \" \"\n",
         "        node = node.next\n",
         "    return w"
-      ],
-      "metadata": {
-        "id": "LoxFEreqPsVF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "text = result[\"text\"]"
-      ],
-      "metadata": {
-        "id": "lIEhlMkbPk6l"
-      },
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "metadata": {
+        "id": "djAwLYJtPoyM"
+      },
+      "outputs": [],
       "source": [
-        "words = get_words(text)\n",
+        "words = get_words(result[\"text\"])\n",
         "fpath='/usr/share/fonts/opentype/ipafont-gothic/ipagp.ttf'\n",
         "wc = WordCloud(background_color=\"white\", width=4800, height=3200, font_path=fpath)\n",
         "wc.generate(words)\n",
         "wc.to_file(\"wc.png\")\n",
         "IPython.display.Image(\"wc.png\")"
-      ],
-      "metadata": {
-        "id": "djAwLYJtPoyM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMmylWZkNU8ypraR+QnNBpT",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
