--- a/laboratory/05.地図を用いたデータの可視化.md
+++ b/laboratory/05.地図を用いたデータの可視化.md
@@ -1,51 +1,84 @@
-## データの可視化(地図)
+# データの可視化(地図)
 
-### ゴール
-このようなものを完成させる．
+## ゴール
+この研修資料では, Kepler.glというツールを使用して, 地図上にデータを可視化する方法について学びます. 最終的には, 以下のような地図を作成することができます. 
 
 - [作例－地域エネルギー需給データベース（再生可能エネルギー 導入ポテンシャル）](https://energy-sustainability.jp/maps/potential/)
 
- ### 使用するデータ・ツール
- - [Kepler.gl](https://kepler.gl/)
- 
- - [都道府県境界データ](https://hub.arcgis.com/datasets/d4e1992666d748a1a01fd1a34b20f88b_0/explore?location=34.332364%2C138.460294%2C6.05)
- 
- ### 方法
- 最終的にgeojsonファイルというものを作成します．
- 
- shpファイル＋csvファイル -> geojsonファイル
- 
- - shp:県境データなどの地理的なデータ，その他のデータを格納する
- - csv:必要なデータをまとめる（扱いやすい）
- 
- #### 0.環境構築
- geopandasというライブラリを使用します．環境の作成がデリケートなので，注意して行ってください．
- （仮想環境を最初に作るとうまくいくという都市伝説を信仰しています）
- 
- ```
- conda create -n 環境名 
- conda activate  環境名
- conda install -c conda-forge geopandas
- ```
- 
- #### 1. 2つのファイルを結合する
- 早速geopandasを用いて，ファイルの作成を進めていきます．
- 今回は，自分が可視化してみたいデータを探してみてください！
- 
- 
- ```
- # sample.py
- import geopandas as gpd
- import pandas as pd
- 
- # read file
- df = pd.read_csv('file_name.csv')
- geo_data = gpd.read_file("file_name.shp")  
- 
+## 使用するデータ・ツール
+- [Kepler.gl](https://kepler.gl/): データの可視化に使用するオープンソースの地図可視化ツールです. ユーザーが手軽に地図上にデータを表示・編集することができます. 
+
+- [都道府県境界データ](https://hub.arcgis.com/datasets/d4e1992666d748a1a01fd1a34b20f88b_0/explore?location=34.332364%2C138.460294%2C6.05): 可視化するための地理データです. 日本の都道府県境界が含まれます. 
+
+## 方法
+以下の手順に従って, 地図上にデータを可視化していきます. 最終的には, geojsonファイルという形式で保存されたデータを, Kepler.gl上で表示することができます. 
+
+shpファイル＋csvファイル -> geojsonファイル
+
+- shp:県境データなどの地理的なデータ，その他のデータを格納する
+- csv:必要なデータをまとめる（扱いやすい）
+
+### 0.環境構築
+まず最初に, geopandasというライブラリを使用するための環境を構築します. 以下の手順に従って, 環境を作成しましょう. 
+- Anacondaをインストールします. 
+- Anaconda prompt を開きます. 
+- 以下のコマンドを入力し, 環境を作成します. 環境名は任意で構いません. 
+- 
+```
+# 環境を作成
+conda create -n 環境名 
+
+# 作成した環境を有効化
+conda activate  環境名
+
+# geopandasをインストール
+conda install -c conda-forge geopandas
+```
+
+### 1. データを読み込む
+Kepler.glで可視化するためには, 地理情報とその他の属性情報を含むデータを用意する必要があります. この手順では, 地理情報と属性情報を含む2つのデータを読み込む方法について説明します. 
+
+#### 1.1 地理情報の読み込み
+地理情報として使用するファイルは, 一般的にはシェープファイル (.shp) と呼ばれます. このファイルには, 国や都道府県の境界, 河川や湖沼などの地物, あるいはそれらの属性情報が含まれます. 
+
+地理情報は, geopandasを使用して読み込むことができます. 以下のように, geopandasのread_file関数を使って.shpファイルを読み込みます. 
+
+
+```
+import geopandas as gpd
+
+# ファイルの読み込み
+geo_data = gpd.read_file('file_name.shp')
+```
+
+#### 1.2 属性情報の読み込み
+属性情報として使用するファイルは, 一般的にはCSVファイル (.csv) と呼ばれます. このファイルには, 地理情報に対応する属性情報が含まれます. 
+属性情報は, pandasを使用して読み込むことができます. 以下のように, pandasのread_csv関数を使って.csvファイルを読み込みます. 
+
+
+```
+import pandas as pd
+
+# ファイルの読み込み
+df = pd.read_csv('file_name.csv')
+```
+以上のように, 地理情報と属性情報をそれぞれ読み込んだ後, merge等の方法で結合することで, Kepler.glで可視化するためのデータを作成することができます. 
+データを結合する方法はいくつかありますが, pandasのconcat()メソッドを使用する方法を紹介します. 
+
+```
  # merge
  merge_data = pd.concat([df, geo_data],  axis=1)
  gdf = gpd.GeoDataFrame(merge_data)
  
  # export
  gdf.to_file(r"file_name.geojson")
- ```
+```
+
+
+### 2. Kepler.glを用いた地図の可視化
+次にKepler.glを用いて，作成したgeojsonファイルを可視化します．
+
+- (Kepler.gl)[https://kepler.gl/demo]にアクセスします. 
+- 「Upload data」をクリックし，作成したgeojsonファイルを選択します．
+-  「Layers」でデータを可視化する方法を選択します．
+可視化が完了したら，「Export」をクリックして，作成した地図をダウンロードします．す．
