--- a/laboratory/05.地図を用いたデータの可視化.md
+++ b/laboratory/05.地図を用いたデータの可視化.md
@@ -23,7 +23,7 @@ shpファイル＋csvファイル -> geojsonファイル
 - Anacondaをインストールします. 
 - Anaconda prompt を開きます. 
 - 以下のコマンドを入力し, 環境を作成します. 環境名は任意で構いません. 
-- 
+
 ```
 # 環境を作成
 conda create -n 環境名 
@@ -78,7 +78,7 @@ df = pd.read_csv('file_name.csv')
 ### 2. Kepler.glを用いた地図の可視化
 次にKepler.glを用いて，作成したgeojsonファイルを可視化します．
 
-- (Kepler.gl)[https://kepler.gl/demo]にアクセスします. 
+- [Kepler.gl](https://kepler.gl/demo) にアクセスします. 
 - 「Upload data」をクリックし，作成したgeojsonファイルを選択します．
 -  「Layers」でデータを可視化する方法を選択します．
 可視化が完了したら，「Export」をクリックして，作成した地図をダウンロードします．す．
