--- a/laboratory/05.地図を用いたデータの可視化.md
+++ b/laboratory/05.地図を用いたデータの可視化.md
@@ -81,4 +81,4 @@ df = pd.read_csv('file_name.csv')
 - [Kepler.gl](https://kepler.gl/demo) にアクセスします. 
 - 「Upload data」をクリックし，作成したgeojsonファイルを選択します．
 -  「Layers」でデータを可視化する方法を選択します．
-可視化が完了したら，「Export」をクリックして，作成した地図をダウンロードします．す．
+可視化が完了したら，「Export」をクリックして，作成した地図をダウンロードします. 
