--- a/laboratory/05.地図を用いたデータの可視化.md
+++ b/laboratory/05.地図を用いたデータの可視化.md
@@ -10,6 +10,8 @@
 
 - [都道府県境界データ](https://hub.arcgis.com/datasets/d4e1992666d748a1a01fd1a34b20f88b_0/explore?location=34.332364%2C138.460294%2C6.05): 可視化するための地理データです. 日本の都道府県境界が含まれます. 
 
+- [地図XML形式変換コンバータ](https://www.digital.go.jp/news/4b7250a3-3fcf-4b83-8d52-4bb131e1ba9d/)
+
 ## 方法
 以下の手順に従って, 地図上にデータを可視化していきます. 最終的には, geojsonファイルという形式で保存されたデータを, Kepler.gl上で表示することができます. 
 
