--- a/laboratory/05.地図を用いたデータの可視化.md
+++ b/laboratory/05.地図を用いたデータの可視化.md
@@ -54,8 +54,10 @@ geo_data = gpd.read_file('file_name.shp')
 ```
 
 #### 1.2 属性情報の読み込み
-属性情報として使用するファイルは, 一般的にはCSVファイル (.csv) と呼ばれます. このファイルには, 地理情報に対応する属性情報が含まれます. 
-属性情報は, pandasを使用して読み込むことができます. 以下のように, pandasのread_csv関数を使って.csvファイルを読み込みます. 
+属性情報として使用するファイルとして, csvファイル (.csv) を使用します. CSV (Comma-Separated Values) ファイルは, テキストファイルの一種で, データを表形式で扱う際によく用いられます. その名の通り, データをカンマで区切って列ごとに配置し, 改行で行を分けた形式で保存されます. また, タブ区切りやセミコロン区切りのファイルも同様にCSVファイルとして扱われます. CSVファイルは、表計算ソフトウェア（例えばMicrosoft ExcelやGoogle Sheets）やプログラミング言語のデータ処理において, 一般的なデータフォーマットの一つです. CSVファイルはテキストファイルであるため, 手軽に編集が可能であり, またデータの移植性が高いという利点があります. 
+
+今回は, 地理情報に対応する属性情報をExcelなどを用いて整理したうえで, csvファイルを用いて, データの整理をします． 
+csvファイルは, pandasを使用して読み込むことができます. 以下のように, pandasのread_csv関数を使って.csvファイルを読み込みます. 
 
 
 ```
