--- a/laboratory/05.地図を用いたデータの可視化.md
+++ b/laboratory/05.地図を用いたデータの可視化.md
@@ -69,7 +69,7 @@ df = pd.read_csv('file_name.csv')
 
 ```
 # merge
-merge_data  =pd.concat([df，geo_data] , axis=1)
+merge_data = pd.concat([df，geo_data] , axis=1)
 gdf = gpd.GeoDataFrame(merge_data)
 
 # export
@@ -77,10 +77,10 @@ gdf.to_file(r"file_name.geojson")
 ```
 
 
-### 2.Kepler．glを用いた地図の可視化
+### 2.Kepler.glを用いた地図の可視化
 次にKepler.glを用いて，作成したgeojsonファイルを可視化します．
 
 - [Kepler.gl](https://kepler.gl/demo)にアクセスします．
-- 「Uploaddata」をクリックし，作成したgeojsonファイルを選択します．
+- 「Upload data」をクリックし，作成したgeojsonファイルを選択します．
 - 「Layers」でデータを可視化する方法を選択します．
 可視化が完了したら，「Export」をクリックして，作成した地図をダウンロードします．
