--- a/laboratory/05.地図を用いたデータの可視化.md
+++ b/laboratory/05.地図を用いたデータの可視化.md
@@ -6,7 +6,7 @@
 - [作例－地域エネルギー需給データベース（再生可能エネルギー導入ポテンシャル）](https://energy-sustainability.jp/maps/potential/)
 
 ## 使用するデータ・ツール
-- [Kepler．gl](https://kepler．gl/):データの可視化に使用するオープンソースの地図可視化ツールです．ユーザーが手軽に地図上にデータを表示・編集することができます．
+- [Kepler.gl](https://kepler．gl/):データの可視化に使用するオープンソースの地図可視化ツールです．ユーザーが手軽に地図上にデータを表示・編集することができます．
 - [都道府県境界データ](https://hub.arcgis.com/datasets/d4e1992666d748a1a01fd1a34b20f88b_0/explore?location=34.332364%2C138.460294%2C6/05):可視化するための地理データです．日本の都道府県境界が含まれます．
 - [地図XML形式変換コンバータ](https://www.digital.go.jp/news/4b7250a3-3fcf-4b83-8d52-4bb131e1ba9d/)
 
